update profile screen favorite products page added

--- a/mobile/lib/l10n/app_ar.arb
+++ b/mobile/lib/l10n/app_ar.arb
@@ -347,6 +347,8 @@
   "manageNotificationPreferences": "إدارة تفضيلات الإشعارات",
   "orderHistoryDescription": "عرض طلباتك السابقة",
   "myAddressesDescription": "إدارة عناوين التوصيل الخاصة بك",
+  "myFavoriteProducts": "منتجاتي المفضلة",
+  "myFavoriteProductsDescription": "عرض وإدارة منتجاتك المفضلة",
   "changePasswordSubtitle": "تغيير كلمة المرور وتعزيز الأمان",
   "notificationSettingsDescription": "إدارة تفضيلات الإشعارات",
   "selectLanguageDescription": "تغيير لغة التطبيق",
