--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -352,6 +352,8 @@
   "manageNotificationPreferences": "Manage your notification preferences",
   "orderHistoryDescription": "View your past orders",
   "myAddressesDescription": "Manage your delivery addresses",
+  "myFavoriteProducts": "My Favorite Products",
+  "myFavoriteProductsDescription": "View and manage your favorite products",
   "changePasswordSubtitle": "Change your password and enhance security",
   "notificationSettingsDescription": "Manage your notification preferences",
   "selectLanguageDescription": "Change application language",
