--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -348,6 +348,8 @@
   "manageNotificationPreferences": "Bildirim tercihlerinizi yönetin",
   "orderHistoryDescription": "Geçmiş siparişlerinizi görüntüleyin",
   "myAddressesDescription": "Teslimat adreslerinizi yönetin",
+  "myFavoriteProducts": "Favori Ürünlerim",
+  "myFavoriteProductsDescription": "Beğendiğiniz ürünleri görüntüleyin ve yönetin",
   "changePasswordSubtitle": "Şifrenizi değiştirin ve güvenliği artırın",
   "notificationSettingsDescription": "Bildirim tercihlerinizi yönetin",
   "selectLanguageDescription": "Uygulama dilini değiştirin",
