--- a/src/Talabi.Api/Resources/AuthResources.resx
+++ b/src/Talabi.Api/Resources/AuthResources.resx
@@ -173,6 +173,24 @@
   <data name="PasswordResetSent" xml:space="preserve">
     <value>If the email exists, a password reset link has been sent.</value>
   </data>
+  <data name="PasswordTooShort" xml:space="preserve">
+    <value>Password must be at least {0} characters long.</value>
+  </data>
+  <data name="PasswordRequiresDigit" xml:space="preserve">
+    <value>Password must contain at least one digit (0-9).</value>
+  </data>
+  <data name="PasswordRequiresLowercase" xml:space="preserve">
+    <value>Password must contain at least one lowercase letter (a-z).</value>
+  </data>
+  <data name="PasswordRequiresUppercase" xml:space="preserve">
+    <value>Password must contain at least one uppercase letter (A-Z).</value>
+  </data>
+  <data name="PasswordRequiresNonAlphanumeric" xml:space="preserve">
+    <value>Password must contain at least one special character (!@#$%^&amp;* etc.).</value>
+  </data>
+  <data name="PasswordSameAsCurrent" xml:space="preserve">
+    <value>New password must be different from current password.</value>
+  </data>
   
   <!-- Email Subjects -->
   <data name="EmailVerificationSubject" xml:space="preserve">
