Implement order details view, add dashboard notifications, and enhance localization and location services.

--- a/mobile/lib/l10n/app_en.arb
+++ b/mobile/lib/l10n/app_en.arb
@@ -1060,5 +1060,8 @@
       "error": {}
     }
   },
-  "marketBannerTitle": "Market Shopping\nat Your Door"
+  "marketBannerTitle": "Market Shopping\nat Your Door",
+  "selectCountry": "Select Country",
+  "localityNeighborhood": "Locality / Neighborhood",
+  "selectCityDistrictWarning": "Please select City and District from dropdowns to confirm."
 }
