--- a/mobile/lib/l10n/app_tr.arb
+++ b/mobile/lib/l10n/app_tr.arb
@@ -1056,5 +1056,8 @@
       "error": {}
     }
   },
-  "marketBannerTitle": "Market Alışverişin\nKapında"
+  "marketBannerTitle": "Market Alışverişin\nKapında",
+  "selectCountry": "Ülke Seçiniz",
+  "localityNeighborhood": "Mahalle",
+  "selectCityDistrictWarning": "Lütfen onaylamak için İl ve İlçe seçiniz."
 }
