--- a/src/Talabi.Api/Resources/AuthResources.en.resx
+++ b/src/Talabi.Api/Resources/AuthResources.en.resx
@@ -199,5 +199,8 @@
   <data name="EmailVerificationSubject" xml:space="preserve">
     <value>Talabi - Email Verification Code</value>
   </data>
+  <data name="ResetPasswordSubject" xml:space="preserve">
+    <value>Talabi - Password Reset</value>
+  </data>
 </root>
 
